--- a/SSLNullClient/.project
+++ b/SSLNullClient/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SSLNullClient</name>
+	<name>SSLNullServer</name>
 	<comment></comment>
 	<projects>
 	</projects>
